# rules_booking

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  dependencies.bzl  deps.bzl  gitlab.bzl  module.bzl  repositories.bzl  tar.bzl  workspace_status.bzl  workspace_status.sh
.github/workflows/: main.yml  release.yml  release_prep.sh
booking/: dependencies.bzl  gitlab.bzl  module.bzl  repositories.bzl  tar.bzl
booking/dependency_check/: BUILD.bazel  BUILD.dependency_check  deps.bzl
booking/repo/: git.bzl
dependency_check/: BUILD.bazel  deps.bzl  rules.bzl
dependency_check_test/: BUILD.bazel  module.bzl
dependency_check_test/src/main/java/com/booking/: HelloWorld.java
dev/: BUILD.bazel  dependencies.bzl  module.bzl  repositories.bzl
e2e/bzlmod/: .bazelrc  MODULE.bazel  dependency_check_test  remap_tar_test
e2e/non-bzlmod/: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE
remap_tar_test/: BUILD.bazel
repo/: git_worker.bzl
