load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier", "buildifier_test")
load(":workspace_status.bzl", "workspace_status")

buildifier(
    name = "buildifier",
)

buildifier_test(
    name = "buildifier_test",
    size = "small",
    srcs = glob(
        [
            "**/*.bazel",
            "**/*.bzl",
            "**/BUILD",
            "**/BUILD.bazel",
        ],
    ) + ["WORKSPACE"],
    mode = "diff",
    tags = [
        "local",
    ],
    verbose = True,
)

workspace_status(
    name = "workspace_status",
)
