load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_booking//booking:workspace_status.bzl", "workspace_status")

buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./.git/*",
    ],
)

buildifier(
    name = "buildifier.check",
    diff_command = "diff -u",
    exclude_patterns = [
        "./.git/*",
    ],
    mode = "diff",
)

workspace_status(
    name = "workspace_status",
)
