"rules_booking dependencies"

module(
    name = "rules_booking",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "aspect_bazel_lib", version = "2.8.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "7.1.2", dev_dependency = True)
bazel_dep(name = "rules_java", version = "7.9.0", dev_dependency = True)
bazel_dep(name = "rules_jvm_external", version = "6.2", dev_dependency = True)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven", dev_dependency = True)
maven.install(
    artifacts = [
        "org.apache.logging.log4j:log4j-api:2.20.0",
        "org.apache.logging.log4j:log4j-core:2.20.0",
    ],
    fetch_sources = False,
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(
    maven,
    "maven"
)
