load("@rules_booking//dependency_check:rules.bzl", "cache", "dependency_check")
load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "hello_world",
    srcs = ["src/main/java/com/booking/HelloWorld.java"],
    main_class = "com.booking.HelloWorld",
    deps = [
        # dependency check only checks for external dependencies
        # so you need to have some dependencies
        "@org_apache_logging_log4j_log4j_api//jar",
        "@org_apache_logging_log4j_log4j_core//jar",
    ],
)

cache(
    name = "cache",
    arguments = [
        "--disableOssIndex",
        "--disableCentral",
        "--disableAssembly",  # we don't need .net assembly support
    ],
    tags = [
        "no-remote-cache-upload",
        "requires-network",
    ],
)

dependency_check(
    name = "dependency_check",
    arguments = [
        # it's best for this arguments to match the ones from the cache
        "--disableOssIndex",
        "--disableCentral",
        "--disableAssembly",
    ],
    cache = ":cache",
    project_key = "com.booking.HelloWorld",
    targets = [":hello_world"],
)
